k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ati-track-service
spec:
  selector:
    app: ati-track
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
